<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyCDylplefNyWlLDoBL_n2VFjwlMWvq3sBg  </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">2190694874509698</string>
    <string name="fb_login_protocol_scheme">fb2190694874509698</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile">My Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="default_hint_text">Where are you going?</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_normal">Raleway-ExtraLight_0.ttf</string>
    <string name="font_normal_dark">OpenSans-Regular.ttf</string>
    <string name="font_bold">Raleway-SemiBold_0.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="notification">Notifications</string>
    <string name="app_name">Ezhalbatek</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="guest_message">Please Sign in or Log in to Proceed!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in">Sign In</string>
    <string name="newuser">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="othersignin">Or Sign in with</string>
    <string name="guest_user">Use as Guest</string>
    <string name="facebook_login">Login With Facebook</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="phone">Phone</string>
    <string name="code_not_recieve">Didn\'t receive a Code? Please wait</string>
    <string name="submit">Submit</string>
    <string name="enter_phone">Mobile Number Cannot be Empty</string>
    <string name="location_error">Location Cannot be Empty</string>
    <string name="numberLength">Mobile Length is Invalid</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_code_error">Code Cannot be Empty</string>
    <string name="enter_valid_code_error">Enter Valid Code</string>
    <string name="full_name">Full Name</string>
    <string name="zipcode">Zip Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook_signup">Register With Facebook</string>
    <string name="enter_name">Enter your Full Name</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_zipcode">Enter Valid Zipcode</string>
    <string name="select_language">Select Language</string>
    <string name="register">Register</string>
    <string name="verification_code_error">Enter Verification Code</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_forgot_password">Verify Forgot Password</string>
    <string name="select_menu">Select Menu</string>
    <string name="subscribe">Subscribe</string>
    <string name="twenty_seven">24/7 Service</string>
    <string name="platinium_package">Platinum Package</string>
    <string name="gold_package">Gold Package</string>
    <string name="silver_package">Silver Package</string>
    <string name="verification_message">A Verification code has been sent to \n your mobile number</string>
    <string name="enter_verfication_code">Enter Verificaiton Code</string>
    <string name="city">City</string>
    <string name="continue_text">Continue</string>
    <string name="facilities">Facilities</string>
    <string name="subscription_price">Subscription Price</string>
    <string name="customer_name">Customer Name :</string>
    <string name="subscriber_id">Subscription ID :</string>
    <string name="address">Address :</string>
    <string name="address_">Address</string>
    <string name="phone_number">Phone Number :</string>
    <string name="phone_number_">Phone Number</string>
    <string name="customer_email">Email :</string>
    <string name="procedd_payment">Proceed Payment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="subsctiption">Subscription</string>
    <string name="my_subscription">My Subscription</string>
    <string name="my_services">My Services</string>
    <string name="logout">Logout</string>
    <string name="description">Description :</string>
    <string name="request_service">Request Service</string>
    <string name="selected_jobs">Selected Jobs</string>
    <string name="additional_job">Additional Job</string>
    <string name="location">Location</string>
    <string name="address_request">Address</string>
    <string name="preferred_date_time">Preferred Date/Time</string>
    <string name="job_title">Job Title</string>
    <string name="addtional_job_description">Write your additional job\'s description here…</string>
    <string name="location_dummy">Enter Your Location Here</string>
    <string name="location_dummy_2">Enter Your Address Here</string>
    <string name="select_date">Select Date</string>
    <string name="preferred_time">Select Time</string>
    <string name="select_time">Select Time</string>
    <string name="payment_option_value">Payment will made in cash upon service delivery</string>
    <string name="term_option_value">I accept all Terms and Privacy Policy</string>
    <string name="terms">Terms </string>
    <string name="privacy">Privacy Policy</string>
    <string name="book_service">Book Request</string>
    <string name="date_before_error">Selected Date is Before Current Date</string>
    <string name="less_time_error">Please Select Arrive time after Current Time</string>
    <string name="select_date_error">Select Date First</string>
    <string name="complete">Completed Jobs</string>
    <string name="subscription_package">Subscription Package :</string>
    <string name="next_visit">Next Visit Due  :</string>
    <string name="view_report">View Report</string>
    <string name="rate">Rate</string>
    <string name="rate_technicain">Rate Technician</string>
    <string name="write_feedback_here">Write your feedback</string>
    <string name="confirm">Confirm</string>
    <string name="rating">Ratings :</string>
    <string name="technician_number">Technician Number : </string>
    <string name="technician_name">Technician Name :</string>
    <string name="tesk_summary">Task Summary  :</string>
    <string name="time_duration">Time Duration  :</string>
    <string name="visit_made">Visit Made  :</string>
    <string name="date">Date :</string>
    <string name="service_id">Service ID :</string>
    <string name="update">Update</string>
    <string name="user_name">User Name</string>
    <string name="contact_number">Contact number</string>
    <string name="query_hint">Write your query here..</string>
    <string name="enter_query">Write atleast one query</string>
    <string name="turn_notification">Turn Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="rate_app">Rate the App</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="change_language">Change Language</string>
    <string name="about_app">About App</string>
    <string name="term_condition">Terms And Condition</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us">Call Us</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="confirm_password_error">Confirm Password did not match</string>
    <string name="same_password_error">New password should be changed from old password</string>
    <string name="old_number">Old Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="package_name">Package</string>
</resources>