<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"


              android:orientation="vertical">

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x50"
        android:src="@drawable/logo"
        />

    <com.ingic.ezhalbatek.ui.views.AnyTextView
        android:id="@+id/title_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:gravity="center"
        android:text="@string/verification_message"
        android:textColor="@color/app_font_dark_gray"
        android:textSize="@dimen/x16"
        app:typeface="@string/font_normal"/>

    <com.ingic.ezhalbatek.ui.views.AnyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:gravity="center"
        android:text="@string/enter_verfication_code"
        android:textColor="@color/app_red"
        android:textSize="@dimen/x16"
        app:typeface="@string/font_normal_dark"/>

    <com.ingic.ezhalbatek.ui.views.PinEntryEditText
        android:id="@+id/txt_pin_entry"
        android:layout_width="@dimen/x250"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/x20"
        android:background="@null"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="4"
        android:paddingTop="@dimen/x40"
        android:text="1234"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="14sp"
        android:visibility="visible"
        app:pinBackgroundDrawable="@drawable/pinborder"
        app:pinLineColors="@color/transparent"
        app:pinTextBottomPadding="@dimen/x20"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginEnd="@dimen/x20"
        android:layout_marginStart="@dimen/x20"
        android:background="@drawable/button_red"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"/>


</LinearLayout>