<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/x20">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/x10"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20"
            android:background="@drawable/btn"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/x10"
                android:src="@drawable/email"/>

            <com.ingic.ezhalbatek.ui.views.AnyEditTextView
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/x10"
                android:background="@null"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/app_font_gray"
                android:textColorHint="@color/app_font_gray"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10"
            android:background="@drawable/btn"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/x10"
                android:src="@drawable/pass"/>

            <com.ingic.ezhalbatek.ui.views.AnyEditTextView
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/x10"
                android:background="@null"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/app_font_gray"
                android:textColorHint="@color/app_font_gray"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal"/>
        </LinearLayout>

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/x10"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textColor="@color/app_font_gray"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/x10"
            android:background="@drawable/button_red"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/x10"
            android:orientation="horizontal">

            <com.ingic.ezhalbatek.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x5"
                android:gravity="center_horizontal"
                android:text="@string/newuser"
                android:textColor="@color/app_font_gray"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal"/>


            <com.ingic.ezhalbatek.ui.views.AnyTextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/create_account"
                android:textColor="@color/app_font_dark_gray"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal_dark"/>

        </LinearLayout>

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/x20"
            android:gravity="center_horizontal"
            android:text="@string/othersignin"
            android:textColor="@color/app_font_dark_gray"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal_dark"/>

        <Button
            android:id="@+id/facebook_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/x25"
            android:background="@drawable/button_blue"
            android:text="@string/facebook_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/guest_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/x10"
            android:background="@drawable/button_gray"
            android:text="@string/guest_user"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />
    </LinearLayout>
</ScrollView>
