<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/x18">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:src="@drawable/logo" />


        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x45"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/x15"
            android:background="@drawable/button_rect_gray"
            android:gravity="center_vertical"
            android:hint="@string/user_name"
            android:paddingStart="@dimen/x10"
            android:textColor="@color/app_font_gray"

            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x45"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_rect_gray_2"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:paddingStart="@dimen/x10"
            android:textColor="@color/app_font_gray"

            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x45"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_rect_gray_2"
            android:gravity="center_vertical"
            android:hint="@string/address_"
            android:paddingStart="@dimen/x10"
            android:textColor="@color/app_font_gray"

            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/edt_package"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x45"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_rect_gray_2"
            android:gravity="center_vertical"
            android:hint="@string/package_name"
            android:paddingStart="@dimen/x10"
            android:textColor="@color/app_font_gray"

            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x45"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_rect_gray_2"
            android:gravity="center_vertical"
            android:hint="@string/phone_number_"
            android:paddingStart="@dimen/x10"
            android:textColor="@color/app_font_gray"

            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/x15"
            android:background="@drawable/button_red"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>