<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/imgCategoryImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:scaleType="fitXY"
        android:src="@drawable/image"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:padding="@dimen/x10">

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/txtDescriptionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/x16"
            app:layout_constraintBottom_toTopOf="@+id/txtDescriptionDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:typeface="@string/font_normal_dark"/>

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/txtDescriptionDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/x5"
            android:ellipsize="end"
            android:gravity="start"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/app_font_gray"
            android:textSize="@dimen/x14"
            app:layout_constraintBottom_toTopOf="@+id/btnRequest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescriptionTitle"
            app:typeface="@string/font_normal"/>

        <Button
            android:id="@+id/btnRequest"
            android:layout_width="0dp"
            android:layout_height="@dimen/x40"
            android:layout_marginEnd="@dimen/x20"
            android:layout_marginStart="@dimen/x20"
            android:layout_marginTop="@dimen/x20"
            android:background="@drawable/button_red"
            android:text="@string/request_service"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescriptionDetail"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>