<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"


              android:orientation="vertical">

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x70"
        android:src="@drawable/logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginEnd="@dimen/x20"
        android:layout_marginStart="@dimen/x20"
        android:layout_marginBottom="@dimen/x10"
        android:background="@drawable/button_stroke_grey"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/x10"
            android:src="@drawable/email" />

        <com.ingic.ezhalbatek.ui.views.AnyEditTextView
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:textAlignment="viewStart"
            android:layout_marginStart="@dimen/x10"
            android:layout_marginEnd="@dimen/x10"
            android:background="@null"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColor="@color/app_font_gray"
            android:textColorHint="@color/app_font_gray"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginEnd="@dimen/x20"
        android:layout_marginStart="@dimen/x20"
        android:background="@drawable/button_red"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x10"
        android:orientation="horizontal">

        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x5"
            android:gravity="center_horizontal"
            android:text="@string/code_not_recieve"
            android:textColor="@color/app_font_gray"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_normal"/>


        <com.ingic.ezhalbatek.ui.views.AnyTextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="1:52"
            android:textColor="@color/app_red"
            android:textSize="@dimen/x12"
            app:typeface="@string/font_normal_dark"/>

    </LinearLayout>
</LinearLayout>